start/stop slideshow for edgecases, enable/disable arrows, fixed spacing on details page, picture click to start slideshow functionality

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,7 @@ body {
   min-width: 1360px;
   margin: auto;
 }
+
+html {
+  overflow-y: scroll;
+}
